# calc

./: .clang-format  .clang-tidy  .cppcheck-suppressions.txt  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: benchmark.yml  ci.yml  code-quality.yml  coverage.yml  release.yml
cmake/: CodeCoverage.cmake  CompileOptions.cmake  PackageConfig.cmake  Toolchain-linux.cmake  Toolchain-macos.cmake  Toolchain-mingw-w64-x86_64.cmake
docs/: API.md  DESIGN.md  GUI_QT_DESGIN.md  USER_GUIDE.md  docs.sh  phase1_report.md  phase2_report.md  phase3_report.md  phase4_report.md  phase5_report.md  phase6_report.md  phase7_report.md  phase8_report.md  phase9_report.md  qt-ui-refactor-plan.md
examples/js_exapmle/src/app/: App.tsx
examples/js_exapmle/src/app/components/calculator/: HistoryPanel.tsx  ProgrammerCalculator.tsx  ScientificCalculator.tsx  StandardCalculator.tsx
examples/qt_example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
include/calc/benchmark/: benchmark.h
include/calc/core/: ast.h  evaluator.h  parser.h  recursive_descent_parser.h  shunting_yard_parser.h  token.h  tokenizer.h
include/calc/math/: converter.h
include/calc/modes/: mode.h  mode_manager.h  programmer_mode.h  scientific_mode.h  standard_mode.h
include/calc/ui/cli/: cli_app.h  command_parser.h  history_manager.h  output_formatter.h
include/calc/ui/qt/: calc_engine_adapter.h
include/calc/ui/qt/core/: calculator_controller.h
include/calc/ui/qt/dialogs/: about_dialog.h  settings_dialog.h
include/calc/ui/qt/models/: history_model.h  mode_model.h
include/calc/ui/qt/widgets/: converter_panel.h  display_widget.h  function_panel.h  history_button.h  history_modal.h  history_widget.h  keypad_widget.h  main_window.h  mode_selector.h
include/calc/utils/: error.h
scripts/: README.md  build.bat  build.sh  check-format.sh  coverage.sh  format.sh  install.sh  package.bat  package.sh  run-clang-tidy.sh  run-cppcheck.sh  valgrind.sh  valgrind.supp
src/: CMakeLists.txt  main.cpp
src/core/: tokenizer.cpp
src/core/ast/: ast_node.cpp  binary_op_node.cpp  function_call_node.cpp  literal_node.cpp  unary_op_node.cpp
src/core/evaluator/: evaluator.cpp  evaluator_visitor.cpp
src/core/parser/: recursive_descent_parser.cpp  shunting_yard_parser.cpp
src/math/: converter.cpp
src/modes/: mode_manager.cpp  programmer_mode.cpp  scientific_mode.cpp  standard_mode.cpp
src/ui/cli/: CMakeLists.txt  cli_app.cpp  command_parser.cpp  history_manager.cpp  main.cpp  output_formatter.cpp
src/ui/qt/: CMakeLists.txt  main.cpp
src/ui/qt/core/: calc_engine_adapter.cpp  calculator_controller.cpp
src/ui/qt/dialogs/: about_dialog.cpp  settings_dialog.cpp
src/ui/qt/models/: history_model.cpp  mode_model.cpp
src/ui/qt/resources/: default.qss  styles.qrc
src/ui/qt/widgets/: converter_panel.cpp  display_widget.cpp  function_panel.cpp  function_panel.cpp.bak  history_button.cpp  history_modal.cpp  history_widget.cpp  keypad_widget.cpp  main_window.cpp  mode_selector.cpp
src/utils/: error.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  evaluator_benchmark.cpp  parser_benchmark.cpp  tokenizer_benchmark.cpp
tests/integration/: CMakeLists.txt  cli_integration_test.cpp  evaluator_integration_test.cpp  programmer_mode_integration_test.cpp  scientific_mode_integration_test.cpp  standard_mode_integration_test.cpp
tests/unit/: CMakeLists.txt  ast_test.cpp  error_test.cpp  evaluator_test.cpp  parser_test.cpp  recursive_descent_parser_test.cpp  shunting_yard_parser_test.cpp  tokenizer_test.cpp
tests/unit/cli/: cli_app_test.cpp  command_parser_test.cpp  history_manager_test.cpp  output_formatter_test.cpp
tests/unit/math/: CMakeLists.txt  converter_test.cpp
tests/unit/modes/: programmer_mode_test.cpp  scientific_mode_test.cpp  standard_mode_test.cpp
